# lyra

./: .gitmodules  README.md  命令行.md
Lyra-2/: .gitignore  .gitmodules  INSTALL.md  README.md  TRAINING.md  custom_trajectory.py  requirements.txt
Lyra-2/assets/custom_trajectory_examples/example_2/: captions.json  trajectory.npz  trajectory.npz-old  提示词.txt
Lyra-2/assets/samples/: 15-cn.txt  15.txt
Lyra-2/gui/: CMakeLists.txt  README.md  flake.nix  requirements.txt
Lyra-2/gui/api/: api_serialization.py  api_types.py  client.py  dummy_client.py  encoding.py  httpx_utils.py  lyra_persistent.py  qwen_captioner.py  server.py  server_base.py  server_lyra.py  test_api_serialization.py  v2v_utils.py  video_stream.py
Lyra-2/gui/assets/: .gitignore
Lyra-2/gui/dependencies/: .gitignore
Lyra-2/gui/dependencies/filesystem/: README.md
Lyra-2/gui/dependencies/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
Lyra-2/gui/dependencies/playne-equivalence/: LICENSE.txt  playne_equivalence.cuh
Lyra-2/gui/include/neural-graphics-primitives/: adam_optimizer.h  bounding_box.cuh  camera_path.h  common.h  common_device.cuh  common_host.h  discrete_distribution.h  dlss.h  json_binding.h  openxr_hmd.h  pybind11_vec.hpp  random_val.cuh  render_buffer.h  shared_queue.h  testbed.h  thread_pool.h  triangle.cuh
Lyra-2/gui/include/tiny-cuda-nn/: common.h  common_device.h  common_host.h  cuda_graph.h  gpu_matrix.h  gpu_memory.h  gpu_memory_json.h  multi_stream.h  random.h  vec.h  vec_json.h  vec_pybind11.h
Lyra-2/gui/scripts/: common.py  constants.py  setup_dependencies.sh
Lyra-2/gui/src/: camera_path.cu  common_host.cu  dlss.cu  main.cu  openxr_hmd.cu  python_api.cu  render_buffer.cu  testbed.cu  thread_pool.cpp
Lyra-2/gui/src/tiny-cuda-nn/: common_host.cu
Lyra-2/lyra_2/_ext/imaginaire/: config.py  trainer.py
Lyra-2/lyra_2/_src/callbacks/: training.py
Lyra-2/lyra_2/_src/configs/: experiment.py
Lyra-2/lyra_2/_src/configs/defaults/: dataloader.py
Lyra-2/lyra_2/_src/configs/defaults/common/: tokenizer.py
Lyra-2/lyra_2/_src/datasets/: config_dataverse.py  data_field.py  depth_warp_dataloader.py  radym.py
Lyra-2/lyra_2/_src/datasets/data_sources/: item_datasets_for_validation.py
Lyra-2/lyra_2/_src/inference/: lyra2_ar_inference.py  vipe_da3_chunked_gs_recon.py
Lyra-2/lyra_2/_src/models/: lyra2_model.py
Lyra-2/lyra_2/_src/modules/: clip.py  conditioner.py
Lyra-2/lyra_2/_src/tokenizers/: wan2pt1.py
Lyra-2/scripts/: convert_wan_checkpoint.py  train.py
